--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <script src="js/lib/less.min.js" type="text/javascript"></script>
 
+    <script src="js/side_menu.js"></script>
     <script src="js/main.js"></script>
 
 </head>
